--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "prisma": "^4.12.0"
+    "prisma": "^4.12.0",
+    "tailwind-scrollbar": "^3.0.0"
   }
 }
